<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/layout_bg_2">

    <TextView
        android:id="@+id/dialogTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_margin="15dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/no_internet_connection" />

    <TextView
        android:id="@+id/dialogMessageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/please_connect" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <Button
            android:id="@+id/retryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:textAppearance="@style/CustomDialogButtonStyle"
            android:layout_marginEnd="15dp"
            android:text="@string/retry" />

        <Button
            android:id="@+id/exitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="14sp"
            android:textAppearance="@style/CustomDialogButtonStyle"
            android:textColor="@color/white"
            android:layout_marginStart="15dp"
            android:text="@string/exit" />
    </LinearLayout>
</LinearLayout>