<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginAccount">

    <TextView
        android:id="@+id/getStarted"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/poppins_bold"
        android:paddingTop="0dp"
        android:text="@string/let_s_get_started"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/createUsernameEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:autofillHints="username"
        android:background="@drawable/custom_edit_text"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingStart="5dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/disable_button"
        android:enabled="false"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/disabled_btn"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71" />

    <ToggleButton
        android:id="@+id/showPasswordToggleButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/show_password_toggle"
        android:textOff=""
        android:textOn=""
        app:layout_constraintBottom_toBottomOf="@+id/createPasswordEditText"
        app:layout_constraintEnd_toEndOf="@+id/createPasswordEditText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/createPasswordEditText"
        app:layout_constraintTop_toTopOf="@+id/createPasswordEditText"
        app:layout_constraintVertical_bias="0.0" />

    <ToggleButton
        android:id="@+id/confirmShowPasswordToggleButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/show_password_toggle"
        android:textOff=""
        android:textOn=""
        app:layout_constraintBottom_toBottomOf="@+id/confirmPasswordEditText"
        app:layout_constraintEnd_toEndOf="@+id/confirmPasswordEditText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/confirmPasswordEditText"
        app:layout_constraintTop_toTopOf="@+id/confirmPasswordEditText"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:autofillHints="password"
        android:background="@drawable/custom_edit_text_disabled"
        android:enabled="false"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="5dp"
        android:textColor="@color/disabled_btn"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.561" />

    <TextView
        android:id="@+id/passwordMismatchTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/password_does_not_match"
        android:textColor="#FF0000"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/createAccountButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEditText"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/createPasswordEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:autofillHints="password"
        android:background="@drawable/custom_edit_text"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="5dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.463" />

    <EditText
        android:id="@+id/createEmailEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:autofillHints="username"
        android:background="@drawable/custom_edit_text"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="5dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.389" />

    <TextView
        android:id="@+id/alreadyHaveAnAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/already_have_an_account"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.814" />

    <TextView
        android:id="@+id/logInTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/poppins_medium"
        android:padding="13dp"
        android:text="@string/log_in"
        android:textColor="@color/BabySteps_primary"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alreadyHaveAnAccountText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/diveIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/create_an_account_and_dive_in"
        android:textAlignment="center"
        android:textColor="#9F9F9F"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getStarted"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>