<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginAccount">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:padding="0dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/disable_button"
        android:enabled="false"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/disabled_btn"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.637" />

    <ToggleButton
        android:id="@+id/showPasswordToggleButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/show_password_toggle"
        android:textOff=""
        android:textOn=""
        app:layout_constraintBottom_toBottomOf="@+id/loginPasswordEditText"
        app:layout_constraintEnd_toEndOf="@+id/loginPasswordEditText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/loginPasswordEditText"
        app:layout_constraintTop_toTopOf="@+id/loginPasswordEditText"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/loginPasswordEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:autofillHints="password"
        android:background="@drawable/custom_edit_text"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="5dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49" />

    <TextView
        android:id="@+id/dontHaveAnAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/don_t_have_an_account"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.753" />

    <TextView
        android:id="@+id/createAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/dontHaveAnAccountText"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/dontHaveAnAccountText"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/create_account"
        android:textColor="@color/BabySteps_primary"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dontHaveAnAccountText"
        app:layout_constraintVertical_bias="0.006" />

    <TextView
        android:id="@+id/signInToContinue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/sign_in_to_continue"
        android:textAlignment="center"
        android:textColor="#9F9F9F"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/loginUsernameEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:autofillHints="username"
        android:background="@drawable/custom_edit_text"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/email"
        android:inputType="text"
        android:paddingStart="5dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.386" />


</androidx.constraintlayout.widget.ConstraintLayout>